--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Julia Lamprecht — CV"
+title: "Curriculum Vitae"
 description: "PhD Student in Astronomy • Galaxy Dynamics • SMBHs • NSCs"
 theme: jekyll-theme-cayman
 
