--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Curriculum Vitae"
 description: "Julia Lamprecht //
-PhD Student in Astronomy • Galaxy Dynamics • SMBHs • NSCs"
+Galaxy Dynamics • SMBHs • NSCs"
 theme: jekyll-theme-cayman
 
 lang: en
