--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Curriculum Vitae"
-description: "Julia Lamprecht • PhD-Student in Astrophysics"
+#description: "Julia Lamprecht • PhD-Student in Astrophysics"
 theme: jekyll-theme-cayman
 
 lang: en
